# zero2prod

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: general.yml
scripts/: init_db.sh
src/: configuration.rs  domain.rs  lib.rs  main.rs  startup.rs
src/domain/: form_data.rs  mod.rs  new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
